@@ -7319,3 +7319,7 @@ PACKAGE: 2.2.99.2
  * Make use of @STRING in BibTeX parsing to expand pre-defined NAMEs, fixing
     #3307
 
+2008-04-14 tdb
+ * Added methods to database/list to generate a histogram of unique values
+    (needed by eprints.soton)
+
